Fixed minor color overlay issues on mobile
ALso fixed z index of main loading screen

--- a/css/Main Stylesheet.css
+++ b/css/Main Stylesheet.css
@@ -34,7 +34,7 @@ body {
     position: fixed;
     height: 100%;
     width: 100%;
-    z-index: 5;
+    z-index: 10;
 
     background-color: white;
 }
@@ -144,14 +144,14 @@ body {
     z-index: 1; 
 }
 .colorOverlay{
-    height: 20%;
-    width: 94%;
+    height: 25%;
+    width: 98%;
     position: absolute;
     bottom: 0;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
     background-color: black;
     opacity: .75;
-    
+
     z-index: 2; 
 }
 .textOverlay {
@@ -289,6 +289,11 @@ p {
     }
     .sidebar:first-child {
         margin-top: 1%;
+    }
+    .colorOverlay{
+        height: 20%;
+        width: 94%;
+        margin-bottom: 3%; 
     }
     .thumbTitle{
         margin-top : 0%;
